added a for loop problem

--- a/Day3_Interactive_session.qmd
+++ b/Day3_Interactive_session.qmd
@@ -51,3 +51,37 @@ if (housing_type == "whole") {
   print('400')
 }
 ```
+
+## For loops 
+
+```{r}
+height <- c(58, 61, 65, 72, 89, 94)
+
+#iterate over each of these and do something with each of these values, seq_along returns 1,2,3,4,5,6,7. will give us values we will call based on position
+#height [i] is ith term in the sequence
+
+for (i in seq_along(height)) {
+  half_height = height[i] / 2
+  print(half_height)
+}
+
+#for each value in the height vector, return the sum of the value + the value right after it.
+
+for(i in seq_along(height)) {
+  add_height = height[i]+height[i+1]
+  print(add_height)
+}
+
+#NA because 101 doesn't have anything to add, because it extends beyond the length of the vector
+
+
+
+# Write a for loop that calculates the value of height of each element divided by the mean of the entire height vector
+
+mean_height <- mean(height)
+
+for (i in seq_along(height)) {
+  div_height = height[i] / mean_height
+  print(div_height)
+}
+```
