added a for loop with a conditional statement

--- a/Day3_Interactive_session.qmd
+++ b/Day3_Interactive_session.qmd
@@ -4,6 +4,11 @@ format: html
 editor: visual
 ---
 
+```{r}
+library(palmerpenguins)
+library(tidyverse)
+```
+
 ## Conditional Statements
 
 ```{r}
@@ -83,5 +88,67 @@ mean_height <- mean(height)
 for (i in seq_along(height)) {
   div_height = height[i] / mean_height
   print(div_height)
+}
+```
+
+Write a for loop with a conditional if statement that returns the means of all numeric variables in the penguins dataset
+
+-   is.numeric (asks is this thing numeric?)
+
+-   mean(vec,na.rm = TRUE)
+
+```{r}
+#to iterate each column in the data frame, only evaluate the mean if the column is numeric, is that the data in each column for the ith index
+
+for(i in seq_along(penguins)){
+  if (is.numeric(penguins[[i]])) {
+    penguins_mean <- mean(penguins[[i]], na.rm=TRUE)
+    print(penguins_mean)
+  }
+}
+
+```
+
+## Functional Programming for easier iteration
+
+Use apply() to iterate over rows or columns. MARGIN=1 (rows), MARGIN = 2 (columns)
+
+```{r}
+#finding the median of each of the columns
+apply(X= mtcars, MARGIN = 2, FUN = median)
+
+apply(mtcars, 2, median)
+```
+
+## dplyr::across()
+
+starter: mean flipper length of penguins by species
+
+```{r}
+#whatever is done next, apply to different groups seperately , group by identifies groups and will do it by group in an organized table. 
+
+penguins %>% 
+  group_by(species, sex, island) %>%
+  summarize(mean_flipper_length = mean(flipper_length_mm, na.rm = TRUE),
+            sd_flipper_length =sd(flipper_length_mm, na.rm = TRUE),
+            max_body_mass = max(body_mass_g, na.rm = TRUE))
+```
+
+```{r}
+#calculates mean across each species group 
+penguins %>% 
+  group_by(species, island) %>% 
+  summarize(across(where(is.numeric),  mean, na.rm = TRUE))
+```
+
+## Detecting a string pattern
+
+```{r}
+food <- "I love enchiladas"
+
+if (str_detect(food, "burritos")) {
+  print("yay burritos")
+} else{
+  print('What about burritos?')
 }
 ```
